empezar lab 3 y lab 4, agregar carpeta para cada lab

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -170,6 +170,8 @@
     
     </article>  
     <footer>VS CODE https://code.visualstudio.com/</footer>  
+
+    <script src="index.js"></script>
 </body>
 </html>
 
