Corregir estilos id y hover

--- a/labs/index.html
+++ b/labs/index.html
@@ -29,14 +29,17 @@
             <li>whatsapp: 4425707090</li>
         </ul>
         <hr>
-        <ul id = "discos"> Mis discos favoritos : </ul>
-        <img src="soundtracksfortheblind.jpg" width="280" height="280" alt="soundtracks for the blind (1995)- swans"> 
-        <img src="velvet.jpg" width="280" height="280" alt="The Velvet Underground (1969) - "> 
-        <img src="siamesed.jpg" width="280" height="280" alt="Siamese Dream (1993)- The Smashing Pumpkins"> 
-        <img src="Hot_Rats_(Frank_Zappa_album_-_cover_art).jpg" width="280" height="280" alt="Hot Rats (1969)- Frank Zappa"> 
-        <img src="double.jpg" width="280" height="280" alt="Double Nickels on the Dime (1984) - Minutemen"> 
-        <img src="bm.jpeg" width="280" height="280" alt="Hellfire (2022) - Black Midi"> 
-        <img src="masterofreality.jpg" width="280" height="280" alt="Master of Reality (1971) - Black Sabbath"> 
+        <ul> Mis discos favoritos : </ul>
+            <li id= "Soundtracks"> soundtracks for the blind (1995)- swans</li>
+            <img src="soundtracksfortheblind.jpg" width="280" height="280" alt="soundtracks for the blind (1995)- swans"> 
+            <li id= "velvet"> The Velvet Underground (1969) - The Velvet Underground</li>
+            <img src="velvet.jpg" width="280" height="280" alt="The Velvet Underground (1969) - The Velvet Underground"> 
+            <img src="siamesed.jpg" width="280" height="280" alt="Siamese Dream (1993)- The Smashing Pumpkins"> 
+            <img src="Hot_Rats_(Frank_Zappa_album_-_cover_art).jpg" width="280" height="280" alt="Hot Rats (1969)- Frank Zappa"> 
+            <img src="double.jpg" width="280" height="280" alt="Double Nickels on the Dime (1984) - Minutemen"> 
+            <img src="bm.jpeg" width="280" height="280" alt="Hellfire (2022) - Black Midi"> 
+            <li id= "sabbath"> Master of Reality (1971) - Black Sabbath</li>
+            <img src="masterofreality.jpg" width="280" height="280" alt="Master of Reality (1971) - Black Sabbath"> 
         <hr>
         <ul id = "peliculas"> Mis películas favoritas: </ul>
         <img src="mulholland_drive_ver1_xxlg.jpg" width="343" height="508" alt="Mulholland Drive (2001)"> 
