Lab 3: Agregar principios de diseño y preguntas lab3

--- a/labs/index.html
+++ b/labs/index.html
@@ -6,8 +6,19 @@
     </title>
     <style>
         body {
-            color: gray;
+            margin: 0 auto;
+            max-width: 50em;
+            font-family: "Arial", "Helvetica", sans-serif !important;
+            line-height: 1.5;
+            padding: 4em 1em;
+            color: rgb(26, 23, 23);
         }
+
+        h1, 
+        strong {
+            color: #333;
+        }
+
     </style>
     <link rel= "stylesheet" href= "index.css">
 </head>
@@ -172,9 +183,44 @@
         </p>
         <hr>
 
-      
+        <strong>Preguntas Lab 3</strong>
+        <hr>
+        <strong>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </strong>
+        <hr>
+        <p>Yo lo utilizaría lo más mínimo posible para no generar confusión ni problemas para los navegadores. Es una buena herramienta para definir los estilos más importantes y que estos se queden definitivamente. Sin embargo muchos navegadores es posibles que no entiendan la especificación y lo brinquen para mostrar el siguiente estilo.</p>
+        <hr>
+        <strong>
+            Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?
+        </strong>
+        <hr>
+        <p>
+            Principalmente por el contraste que tenga con el resto de la pagina y la legibilidad del texto con esa imagen. Ademas de escoger una imagen con buenas dimensiones que cuide al mismo tiempo que no exceda demasiado el tamaño en mb.
+        </p>
+        <hr>
+        <strong>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</strong>
+        <hr>
+        <p>Existen dos tipos de medidas: las absolutas: que muestran el tamaño real y no son recomendables para utilizarse en pantalla ya que son de tamaño real, estas son pt (points) y px(pixeles). Y el otro tipo son tamaños relativos: Estos tamaños son versatiles para hacer escala con diferentes dispositivos ya que especifican una medida relativa. Una medida relativa en css es el uso de % . Así que recomiendo que para software eligan una medida que sea compatible con la mayoría de los navegadores y que sea relativa y ajustable dependiendo del dispositivo.</p>
+        <hr>
+        <strong>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</strong>
+        <p>
+            Tomando en cuenta que al minimizar los elementos en codigo como los espacios en blanco y los archivos dentro de una pagina implica menos mb de tamaño y menos carga al servidor entonces podemos decir que mejora el rendimiento. Ya que en cuanto menor sea la cantidad de datos en el servidor , en el cache, y en la banda ancha, esto significa una mayor velocidad tanto en computadoras como en celulares.          </p>
+        <hr>
+        <strong>
+            Referencias:
+        </strong>
+        <hr>
+        <p>
+            CSS units. (n.d.). https://www.w3schools.com/cssref/css_units.php
+
+            CSS !important Property. (n.d.). https://www.w3schools.com/css/css_important.asp
+
+            Nice, B. (2018a, September 21). The Ultimate Guide to CSS + Cheat Sheets 📑 - Level Up! - Medium. Medium. https://medium.com/level-up-web/the-ultimate-guide-to-css-103b0f883de3
+
+            Thomas, J. (n.d.). Web Design in 4 minutes. https://jgthms.com/web-design-in-4-minutes/
 
 
+
+        </p>
     
     </article>  
     <footer>VS CODE https://code.visualstudio.com/</footer>  
