--- a/labs/index.html
+++ b/labs/index.html
@@ -225,7 +225,7 @@
     </article>  
     <footer>VS CODE https://code.visualstudio.com/</footer>  
 
-
+    <script src="index.js"></script>
 </body>
 </html>
 
