Lab5: pregunta lista

--- a/labs/index.html
+++ b/labs/index.html
@@ -270,19 +270,54 @@
                     Nice, B. (2018a, September 21). The Ultimate Guide to CSS + Cheat Sheets 📑 - Level Up! - Medium. Medium. https://medium.com/level-up-web/the-ultimate-guide-to-css-103b0f883de3
 
                     Thomas, J. (n.d.). Web Design in 4 minutes. https://jgthms.com/web-design-in-4-minutes/
-
-
-
                 </p>
-
-                
-            
+                <hr>
+                <strong>Lab 4</strong> 
+                <hr>
+                <strong>¿Qué diferencias y semejanzas hay entre Java y JavaScript?</strong>
+                <p>
+                Java es un tipo de lenguaje de programación que necesita de un compilador como C + +, y su enfoque está en el desarrollo de apps y videojuegos. 
+                Por otro lado, javascript es un lenguaje de programación que no necesita de un compilador sino por medio de scripts que son interpretados y ejecutados por el mismo navegador. 
+                En cuanto a semejanzas, los dos tienen sintaxis parecida a c. La forma en la que se declaran las variables y las funciones es similar. Además de que los dos pueden ser compatibles para navegadores, aunque Javascript es mucho más popular. 
+                </p>
+                <hr>
+                <strong>¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</strong>
+                <hr>
+                <ul>
+                    <li>getDate</li>
+                    <li>getHours</li>
+                    <li>getMinutes</li>
+                    <li>getSeconds</li>
+                    <li>getMilliseconds</li>
+                </ul>
+                <hr>
+                <strong>¿Qué métodos tienen los arreglos? (Menciona al menos 5*)</strong>
+                <ul>
+                    <li>arreglo.length</li>
+                    <li>arreglo.push</li>
+                    <li>arreglo[10] </li>
+                    <li>join</li>
+                    <li>indexOf</li>
+                </ul>
+                <hr>
+                <strong>¿Cómo se declara una variable con alcance local dentro de una función?</strong>
+                <hr>
+                <p>Puede ser con var, ya que al declarar dentro de la función  solamente se podrá acceder por medio de esa función. Si se hace por fuera marca Reference Error. </p>
+                <hr>
+                <strong>¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</strong>
+                <hr>
+                <p>Puede llegar a ser confuso y tener comportamientos raros con la memoria, especialmente si se utiliza una variable global para satisfacer las necesidades de muchas funciones dentro del programa, y esta variable no se le asigna un nombre.  En cambio si se utiliza una variable local dentro de una función, es muy difícil confundirse aunque tengan el mismo nombre porque en la misma ejecución del programa nos podemos dar cuenta que la variable pertenece a una función específica del programa. </p>
+                <hr>
+                <strong>Preguntas Lab 5:</strong>
+                <hr>
+                <p>Material Design es un tipo de normativas de diseño para aplicaciones web que tiene como objetivo basarse en objetos reales, estudiar su composición y comportamiento con la luz y sombras y así mostrarle al usuario un diseño tangible. Y de alguna manera sencillo de usar, ya que el usuario con solamente ver el diseño podrá intuir la funcionalidad de cada uno de los objetos que componen la página o app. Este lenguaje de diseño lo empezó a utilizar y popularizar Google con las versiones de android. Pero ahora es un lenguaje muy universal y compatible con casi cualquier dispositivo.</p>
+                <strong>Referencia: </strong> 
+                <p>Dairox. (2014). Material Design: El nuevo lenguaje de diseño hecho por Google. Xataka México. https://www.xataka.com.mx/aplicaciones/material-design-el-nuevo-lenguaje-de-diseno-hecho-por-google</p>
+                <hr>
+                <div id="ejercicio1"></div>
+                <hr>
+                <div id="ejercicio2"></div>
             </article> 
-            <hr>
-
-            <div> id = "ejericio1"</div>
-
-            <hr>
         </div>
     </section>
     <footer>VS CODE https://code.visualstudio.com/</footer>  
