Lab 6: Agregar ejemplo de la clase (posters)

--- a/labs/index.html
+++ b/labs/index.html
@@ -19,6 +19,12 @@
     </header>
     <section class="section">
         <div class="container">
+            <p>
+                <label for="pelicula">Pelicula favorita: </label>
+                <input id ="pelicula" class="input is-primary" type="text" placeholder="Primary input">
+            </p>
+            
+            <div id="posters"></div>
             <article>
                 <a href="https://docs.google.com/document/d/1taxL0EvnJZAsyspMOUCZCPJbpaIAf0wxzTRMmPmrt0E/edit?usp=sharing">Preguntas Lab 1</a>
                 <p>Soy Emiliano Pomar. Nací en CDMX pero llevo mucho tiempo viviendo en Querétaro. Mis intereses más fuertes son la música y el cine. Actualmente curso el 4to semestre de ingeniería en tecnologías computacionales. </p>
