Lab4: Agregar preguntas y ejercicios 1-5

--- a/labs/index.html
+++ b/labs/index.html
@@ -314,15 +314,44 @@
                 <hr>
                 <p>Puede llegar a ser confuso y tener comportamientos raros con la memoria, especialmente si se utiliza una variable global para satisfacer las necesidades de muchas funciones dentro del programa, y esta variable no se le asigna un nombre.  En cambio si se utiliza una variable local dentro de una función, es muy difícil confundirse aunque tengan el mismo nombre porque en la misma ejecución del programa nos podemos dar cuenta que la variable pertenece a una función específica del programa. </p>
                 <hr>
+                <strong>Referencias: </strong>
+                    <p>JavaScript Arrow Function. (n.d.). https://www.w3schools.com/js/js_arrow_function.asp</p>
+                    <br>
+                    <p>formula general. (n.d.). http://ceca.uaeh.edu.mx/algebra_lineal/2.1.html</p>
+                    <br>
+                    <p>Date.Now() - JavaScript | MDN. (2023, June 1). https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/now</p>
+                    <br>
+                    <p>Calcular cantidad de números negativos de un array en una función de JS. (n.d.). Stack Overflow En Español. https://es.stackoverflow.com/questions/484717/calcular-cantidad-de-n%C3%BAmeros-negativos-de-un-array-en-una-funci%C3%B3n-de-js</p>
+                    <br>
                 <strong>Preguntas Lab 5:</strong>
                 <hr>
                 <p>Material Design es un tipo de normativas de diseño para aplicaciones web que tiene como objetivo basarse en objetos reales, estudiar su composición y comportamiento con la luz y sombras y así mostrarle al usuario un diseño tangible. Y de alguna manera sencillo de usar, ya que el usuario con solamente ver el diseño podrá intuir la funcionalidad de cada uno de los objetos que componen la página o app. Este lenguaje de diseño lo empezó a utilizar y popularizar Google con las versiones de android. Pero ahora es un lenguaje muy universal y compatible con casi cualquier dispositivo.</p>
                 <strong>Referencia: </strong> 
                 <p>Dairox. (2014). Material Design: El nuevo lenguaje de diseño hecho por Google. Xataka México. https://www.xataka.com.mx/aplicaciones/material-design-el-nuevo-lenguaje-de-diseno-hecho-por-google</p>
                 <hr>
-                <div id="ejercicio1"></div>
+                <strong>Lab 4: Ejercicio 1</strong>
+                <br>
+                <ul id="ejercicio1"></ul>
                 <hr>
+                <strong>Lab 4: Ejercicio 2</strong>
+                <br>
                 <div id="ejercicio2"></div>
+                <br>
+                <div id="ejercicio2.1"></div>
+                <hr>
+                <strong>Lab4: ejercicio3</strong>
+                <br>
+                <div id="ejercicio3.1"></div>
+                <div id="ejercicio3.2"></div>
+                <div id="ejercicio3.3"></div>
+                <hr>
+                <strong>Lab4: ejercicio4</strong>
+                <br>
+                <div id="ejercicio4"></div>
+                <hr>
+                <strong>Lab4: ejercicio5</strong>
+                <br>
+                <div id="ejercicio5"></div>
             </article> 
         </div>
     </section>
