--- a/labs/index.html
+++ b/labs/index.html
@@ -352,6 +352,14 @@
                 <strong>Lab4: ejercicio5</strong>
                 <br>
                 <div id="ejercicio5"></div>
+                <hr>
+                <strong>Lab4: ejercicio6</strong>
+                <br>
+                <p>Problema: crear una funcion que calcule la duración de un álbum (en este caso el álbum 13 de Blur). La duración de cada canción es almacenada en un objeto llamado album. Y la función regresa la duración y promedio</p>
+                <br>
+                <div id="ejercicio6"></div>
+                <br>
+                <div id="ejercicio6.1"></div>
             </article> 
         </div>
     </section>
