Agregar primeros labs a carpeta separaday agregar ejercicio clase lab 8

--- a/labs/primeros labs/index.html
+++ b/labs/primeros labs/index.html
@@ -278,7 +278,7 @@
                     Thomas, J. (n.d.). Web Design in 4 minutes. https://jgthms.com/web-design-in-4-minutes/
                 </p>
                 <hr>
-                <strong>Lab 4</strong> 
+                <strong>Preguntas Lab 4</strong> 
                 <hr>
                 <strong>¿Qué diferencias y semejanzas hay entre Java y JavaScript?</strong>
                 <p>
