--- a/labs/primeros labs/index.html
+++ b/labs/primeros labs/index.html
@@ -360,6 +360,10 @@
                 <div id="ejercicio6"></div>
                 <br>
                 <div id="ejercicio6.1"></div>
+                <hr>
+                <strong>Preguntas Lab 6</strong>
+                <hr>
+                <strong>¿Por qué es una buena práctica usar JavaScript para checar que sean válidos los inputs de las formas antes de enviar los datos al servidor?</strong>
             </article> 
         </div>
     </section>
