--- a/labs/primeros labs/index.html
+++ b/labs/primeros labs/index.html
@@ -23,8 +23,24 @@
                 <label for="pelicula">Pelicula favorita: </label>
                 <input id ="pelicula" class="input is-primary" type="text" placeholder="Primary input">
             </p>
+            <div class = "box">
+                <h1 class="title is-1-desktop">Lab6: Tienda</h1>
+                <br>
+                <div id="papas"></div>
+                <hr>
+                <button id="boton_papas" class="button is-danger is-rounded">Precio</button>
+                <hr>
+                <box id="precio_papas">...</box>
+                <hr>
+                <div id="refrescos"></div>
+                <hr>
+                <button id="boton_refresco" class="button is-danger is-rounded">Precio</button>
+                <hr>
+                <box id="precio_refrescos">...</box> 
+                <hr>
+            </div>
+
             
-            <div id="posters"></div>
             <article>
                 <a href="https://docs.google.com/document/d/1taxL0EvnJZAsyspMOUCZCPJbpaIAf0wxzTRMmPmrt0E/edit?usp=sharing">Preguntas Lab 1</a>
                 <p>Soy Emiliano Pomar. Nací en CDMX pero llevo mucho tiempo viviendo en Querétaro. Mis intereses más fuertes son la música y el cine. Actualmente curso el 4to semestre de ingeniería en tecnologías computacionales. </p>
