Agregar preguntas lab6

--- a/labs/primeros labs/index.html
+++ b/labs/primeros labs/index.html
@@ -375,11 +375,22 @@
                 <br>
                 <div id="ejercicio6"></div>
                 <br>
-                <div id="ejercicio6.1"></div>
                 <hr>
                 <strong>Preguntas Lab 6</strong>
                 <hr>
                 <strong>¿Por qué es una buena práctica usar JavaScript para checar que sean válidos los inputs de las formas antes de enviar los datos al servidor?</strong>
+                <br>
+                <p>Principalmente ayuda a la experiencia del usuario, ya que se le da una retroalimentación de lo que está ingresando. Además evitas varias consultas y envíos al servidor porque corroboras que los datos ingresados sean los correctos. </p>
+                <hr>
+                <strong>¿Cómo puedes saltarte la seguridad de validaciones hechas con JavaScript?</strong>
+                <br>
+                <p>Por medio del navegador, al ingresar a la ventana de inspeccionar se puede modificar el DOM.</p>
+                <hr>
+                <strong>Si te puedes saltar la seguridad de las validaciones de JavaScript, entonces ¿por qué la primera pregunta dice que es una buena práctica?</strong>
+                <br>
+                <p>Para que el usuario tenga una experiencia con la interfaz rápida, y no se tenga que esperar o ingresar a ver si hay algún problema con el servidor. Tan solo con haber ingresado un campo incorrectamente, tendrá una retroalimentación instantpanea por medio de javascript. </p>
+                <hr>
+
             </article> 
         </div>
     </section>
