--- a/labs/primeros labs/index.html
+++ b/labs/primeros labs/index.html
@@ -30,6 +30,8 @@
                 <hr>
                 <button id="boton_papas" class="button is-danger is-rounded">Precio</button>
                 <hr>
+                <button id="boton_seleccion1" class="button is-danger is-rounded">Seleccionar papas</button>
+                <hr>
                 <box id="precio_papas">...</box>
                 <hr>
                 <div id="refrescos"></div>
@@ -37,6 +39,8 @@
                 <button id="boton_refresco" class="button is-danger is-rounded">Precio</button>
                 <hr>
                 <box id="precio_refrescos">...</box> 
+                <hr>
+                <button id="boton_seleccion2" class="button is-danger is-rounded">Seleccionar refrescos</button>
                 <hr>
             </div>
 
